--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -34,7 +34,7 @@ appender.hibernate.strategy.delete.ifAccumulatedFileCount.exceeds = 5
 
 loggers=file, hibernate
 
-logger.file.name = sescheraun.WorldOfFutureDarkness
+logger.file.name = sescheraun.worldoffuturedarkness
 logger.file.level = debug
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
