--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
   <display-name>Archetype Created Web Application</display-name>
+
+
+        <!-- Tell the server to use form-based authentication. -->
+<login-config>
+<auth-method>FORM</auth-method>
+<form-login-config>
+  <form-login-page>/admin/login.jsp</form-login-page>
+  <form-error-page>/admin/login-error.jsp</form-error-page>
+</form-login-config>
+</login-config>
 </web-app>
