--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,15 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
         <dependencies>
           <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-surefire-provider</artifactId>
             <version>1.0.0</version>
           </dependency>
-
-
         </dependencies>
       </plugin>
     </plugins>
