--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,16 @@
       <form-error-page>/login-error.jsp</form-error-page>
     </form-login-config>
     </login-config>
+    
+    <error-page>
+        <error-code>403</error-code>
+        <location>/errors/403.jsp</location>
+    </error-page>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/errors/404.jsp</location>
+    </error-page>
 
     <security-constraint>
         <web-resource-collection>
@@ -22,7 +32,9 @@
         <auth-constraint>
             <role-name>admin</role-name>
         </auth-constraint>
+    </security-constraint>
 
+    <security-constraint>
         <web-resource-collection>
             <web-resource-name>gamemaster</web-resource-name>
             <url-pattern>/gamemaster/*</url-pattern>
@@ -30,7 +42,9 @@
         <auth-constraint>
             <role-name>game-master</role-name>
         </auth-constraint>
+    </security-constraint>
 
+    <security-constraint>
         <web-resource-collection>
             <web-resource-name>player</web-resource-name>
             <url-pattern>/player/*</url-pattern>
