--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,15 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <display-name>Archetype Created Web Application</display-name>
+    <description>
+        world of Darkness/Cyberpunk cross over character creator.
+    </description>
 
+    <welcome-file-list>
+        <welcome-file>/index.jsp</welcome-file>
+    </welcome-file-list>
 
-            <!-- Tell the server to use form-based authentication. -->
+    <!-- Tell the server to use form-based authentication. -->
     <login-config>
     <auth-method>FORM</auth-method>
     <form-login-config>
