--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,7 +46,7 @@
             <url-pattern>/gamemaster/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
-            <role-name>game-master</role-name>
+            <role-name>gameMaster</role-name>
         </auth-constraint>
     </security-constraint>
 
@@ -65,7 +65,7 @@
     </security-role>
 
     <security-role>
-        <role-name>game-master</role-name>
+        <role-name>gameMaster</role-name>
     </security-role>
 
     <security-role>
