--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,15 +50,15 @@
         </auth-constraint>
     </security-constraint>
 
-    <security-constraint>
-        <web-resource-collection>
-            <web-resource-name>player</web-resource-name>
-            <url-pattern>/player/*</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <role-name>player</role-name>
-        </auth-constraint>
-    </security-constraint>
+    <!--<security-constraint>-->
+        <!--<web-resource-collection>-->
+            <!--<web-resource-name>player</web-resource-name>-->
+            <!--<url-pattern>/player/*</url-pattern>-->
+        <!--</web-resource-collection>-->
+        <!--<auth-constraint>-->
+            <!--<role-name>player</role-name>-->
+        <!--</auth-constraint>-->
+    <!--</security-constraint>-->
 
     <security-role>
         <role-name>player</role-name>
