--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,11 @@
       <artifactId>javaee-web-api</artifactId>
       <version>7.0</version>
     </dependency>
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-web-api</artifactId>
+      <version>7.0</version>
+    </dependency>
   </dependencies>
 
 </project>
