--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,19 @@
       </dependency>
 
       <dependency>
+          <groupId>com.sun.mail</groupId>
+          <artifactId>javax.mail</artifactId>
+          <version>1.6.2</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+      <dependency>
+          <groupId>javax.mail</groupId>
+          <artifactId>javax.mail-api</artifactId>
+          <version>1.6.2</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.apache.tomcat</groupId>
         <artifactId>tomcat-catalina</artifactId>
         <version>8.5.3</version>
